# authorization

./: README.md
api/: .env  Cargo.toml
api/src/: auth.rs  lib.rs  main.rs  router.rs
api/src/config/: mod.rs
api/src/controller/: card_key.rs  computer.rs  login.rs  mod.rs  notice.rs
api/src/entity/: announcements.rs  card_keys.rs  computer_authorizations.rs  computers_id_log.rs  mod.rs  prelude.rs  user_ip_logs.rs  users.rs
api/src/utils/: computer_md5.rs  database.rs  jwt.rs  md5.rs  mod.rs  result.rs
db/: db.sql
ui/: components.d.ts  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.vue
ui/src/components/admin/: IndexComponent.vue
ui/src/components/admin/cdk/: CreateCdk.vue  HistoryCdk.vue  ShowCdk.vue
ui/src/components/admin/computer/: ComputerAll.vue
ui/src/components/admin/nav/: LeftNavComponent.vue
ui/src/components/admin/notice/: ListNotice.vue  PushNotice.vue
ui/src/entity/: index.ts
ui/src/hoooks/: router.ts
ui/src/router/: index.ts
ui/src/utils/: request.ts
ui/src/views/: AdminView.vue  IndexView.vue  LoginView.vue
