[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
# axum web框架
axum = "0.7.7"
# 异步运行框架
tokio = { version = "1.41.1", features = ["full"] }
# 中间件
tower = "0.5.1"
# 数据库操作
sea-orm = { version = "1.1.0", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros", "debug-print", "with-chrono" ] }
# 跨域中间件
tower-http = { version = "0.6.1", features = ["full"] }
# 配置读取库
dotenv = "0.15.0"
# 序列化
serde = { version = "1.0.215", features = ["derive"] }
# 全局变量
lazy_static = "1.5.0"
# 日志库
log = "0.4.22"
# 随机库
rand = "0.8.5"
# 时间库
chrono = "0.4.38"
# json
serde_json = "1.0.133"
# jwt
jsonwebtoken = "9.3.0"
# 加密解密
md-5 = "0.10.6"
ring = "0.17.8"